# internal-tools

./: .gitignore  README.md  calc_app.py  creator_pay.py
calculator-tool/: package-lock.json  package.json
frankenstein-maker/: .gitignore  README.md  pyproject.toml  requirements.txt
frankenstein-maker/data/manifests/: everest_styles.json
frankenstein-maker/data/seeds/: ig_accounts.example.txt
frankenstein-maker/fm/: __init__.py  cli.py  config.py  logging.py
frankenstein-maker/fm/capture/: hotkeys.py  manual.py  session.py  store.py
frankenstein-maker/fm/hooks/: dedupe.py  extract.py
frankenstein-maker/fm/render/: export.py  overlay.py  timeline.py
frankenstein-maker/fm/utils/: time.py
frankenstein-maker/fm/validate/: assets.py
frankenstein-maker/tests/: test_cooldown.py  test_dedupe.py  test_manifest_validation.py  test_render_contract.py
outreach-tool-automation/: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  outreach-automation-plan.md  pyproject.toml
outreach-tool-automation/ops/: RUNBOOK.md  accounts.seed.example.json  com.a17.outreach.daemon.plist  com.a17.outreach.reset.daemon.plist  get_gmail_refresh_token.py  install_daemons.sh  open_platform_profile.sh  start_chrome_debug.sh  start_ig_account_debug.sh  start_outreach_machine.sh  start_tiktok_account_debug.sh  uninstall_daemons.sh
outreach-tool-automation/src/outreach_automation/: __init__.py  account_router.py  dm_format.py  doctor.py  email_sender.py  firestore_client.py  ig_dm.py  local_scraper_client.py  logger.py  login_bootstrap.py  models.py  node_runtime.py  orchestrator.py  reset_counters.py  run_once.py  scraper_client.py  seed_accounts.py  selectors.py  session_manager.py  settings.py  sheets_client.py  status_mapper.py  stop_run.py  tier_resolver.py  tiktok_dm.py  tiktok_nodriver_spike.py  unlock_run_lock.py
outreach-tool-automation/src/outreach_automation/clients/: firestore_client.py  local_scraper_client.py  sheets_client.py
outreach-tool-automation/tests/: test_account_router.py  test_dm_format.py  test_doctor.py  test_local_scraper_client.py  test_orchestrator_validation.py  test_run_once_modes.py  test_run_once_report.py  test_sheets_client.py  test_status_mapper.py  test_tier_resolver.py  test_tiktok_nodriver_spike.py
slideshow-maker/: .gitignore  README.md  pyproject.toml
slideshow-maker/config/: accounts.example.txt
slideshow-maker/scripts/: run_pipeline.sh
slideshow-maker/slideshow_maker/: __init__.py  cli.py  copywriter.py  errors.py  exporter.py  models.py  pipeline.py  renderer.py
slideshow-maker/slideshow_maker/formats/: __init__.py  base.py  skincare_v1.py
slideshow-maker/slideshow_maker/sources/: base.py  google_flow.py  local_folder.py
slideshow-maker/src/slideshow_machine/: assets_normalizer.py  cli.py  crawler.py  db.py  drafts.py  exporter.py  matcher.py  scoring.py  types.py
slideshow-maker/tests/: conftest.py  test_assets_normalizer.py  test_copywriter.py  test_crawler.py  test_exporter.py  test_format_skincare.py  test_integration.py  test_pipeline.py  test_renderer.py
(+230 files in other folders)
