[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slideshow-maker"
version = "0.1.0"
description = "Python CLI tool for generating TikTok slideshow variations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Pillow>=10.0.0",
]

[project.optional-dependencies]
flow = [
  "playwright>=1.48.0",
]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
slideshow-maker = "slideshow_maker.cli:main"

[tool.setuptools]
packages = ["slideshow_maker", "slideshow_maker.formats", "slideshow_maker.sources"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
